--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
     color: var(--body-font-color);
     background-color: var(--black);
@@ -25,6 +29,10 @@ h1, h2, h3, h4{
 a {
     text-decoration: none;
     color: inherit;
+}
+
+ul, li{
+    list-style: none;
 }
 
 button {
