Implemented the FeaturedItems section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,9 @@
 // variables
 :root {
     // colors
-    --black: #050505;
+    --black: #111616;
     --gold: #E6D393;
-    --body-font-color: #e7e9ec;
+    --body-font-color: #f4f5f7;
 }
 
 * {
