--- a/app/homepage/Hero/Hero.module.scss
+++ b/app/homepage/Hero/Hero.module.scss
@@ -6,14 +6,23 @@
     display: flex;
     align-items: top;
 
-    .heroVideo {
+    .videoWrapper{
         position: absolute;
+        display: flex;
+        height: 100%;
         width: 100%;
-        height: 50%;
-        top: 0;
-        object-fit: cover;
-        z-index: 0;
+        align-items: start;
+
+        .heroVideo {
+            position: relative;
+            width: 100%;
+            height: 50%;
+            top: 0;
+            object-fit: contain;
+            z-index: 0;
+        }
     }
+
 
     .noiseFilter {
         position: absolute;
