added animnations to Contact section

--- a/app/homepage/About/About.module.scss
+++ b/app/homepage/About/About.module.scss
@@ -1,6 +1,6 @@
 .about{
     background-color: black;
-    // height: 100vh;
+    scroll-margin-top: 70px;
     padding: 30px;
     display: flex;
     justify-content: space-between;
