--- a/app/homepage/Contact/Contact.module.scss
+++ b/app/homepage/Contact/Contact.module.scss
@@ -1,8 +1,10 @@
 .contactContainer {
-    height: 80vh;
-    padding: 30px 100px;
+    height: 100vh;
+    padding: 30px 0;
     background-color: white;
     color: black;
+    position: relative;
+    scroll-margin-top: 70px;
     
     .contactContent{
         display: flex;
@@ -17,10 +19,11 @@
     .contactVideoContainer {
         position: relative;
         height: 100%;
+        display: flex;
+        align-items: center;
 
         .contactVideo {
-            height: 100%;
-            width: 100%;
+            height: 80%;
             border-radius: 30px;
             position: relative;
             z-index: 1;
@@ -35,7 +38,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 33% 0;
+            padding: 53% 0;
 
             .line {
                 background-color: white;
@@ -62,6 +65,7 @@
         
             h3{
                 font-weight: 400;
+                max-width: 500px;
             }
         }
     
@@ -108,6 +112,34 @@
                 transition: 0.5s;
                 text-align: center;
             }
+        }
+    }
+
+    // leaves
+    .leavesDiv{
+        // width: 100%;
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+        width: 100%;
+        top: 0;
+
+        img{
+            position: absolute;
+            height: 150px;
+        }
+
+        .rightLeaf{
+            bottom: 10%;
+            right: -50;
+            transform: rotate(-45deg);
+        }
+
+        .leftLeaf{
+            top: 10%;
+            left: -50;
+            transform: rotate(-45deg);
         }
     }
 }
