--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,10 +13,11 @@
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body{
+    overflow-x: hidden;
     color: var(--body-font-color);
     background-color: var(--black);
     font-family: var(--body-font);
@@ -40,7 +41,7 @@ button {
     text-transform: uppercase;
     padding: 10px 20px;
     border-radius: 30px;
-    background-color: white;
+    background-color: #f4f5f7;
     text-align: center;
     color: var(--black);
     cursor: pointer;
